Removed the lubm-* ant build targets.  See bigdata-perf/lubm, bigdata-perf/bsbm3, etc. for performance tests.  Removed some utility targets which are also now accessible via the bigdata-perf package.
git-svn-id: svn+ssh://svn.code.sf.net/p/bigdata/code/branches/QUADS_QUERY_BRANCH@4163 8f7bc0f5-282e-0410-95e3-8d296e9bb460