@@ -627,161 +627,6 @@ ${postInstallMessage}</echo>
 </java>
 
 </target>
-
-<!--                                                                   -->
-<!--                    LUBM TARGETS (OPTIONAL)                        -->
-<!--                                                                   -->
-
-<target name="lubm-clean" description="Clean the lubm-integration from the build directory.">
-<delete dir="${build.dir}/lubm" />
-</target>
-
-<target name="lubm-prepare" description="Clean the lubm-integration from the build directory.">
-<mkdir dir="${build.dir}/lubm" />
-<mkdir dir="${build.dir}/lubm/classes" />
-<mkdir dir="${build.dir}/lubm/lib" />
-</target>
-
-<path id="lubm.build.classpath" description="The lubm build-time classpath (this expects to find the bigdata JAR already installed).">
-<fileset dir="${install.lib.dir}">
-	<include name="**/*.jar" />
-</fileset>
-</path>
-
-<!-- And now for something totally weird.  If you compile against the bigdata.jar
-     rather than build.dir/classes then you will see some errors reported in
-     LubmGeneratorMaster.java which otherwise are not reported... -->
-<target name="lubm-compile" depends="lubm-prepare" description="Compile the optional lubm integration.">
-<javac destdir="${build.dir}/lubm/classes" classpathref="runtime.classpath" debug="${javac.debug}" debuglevel="${javac.debuglevel}" verbose="${javac.verbose}" encoding="${javac.encoding}">
-	<!-- note: must also specify -bootclasspath and -extdirs when cross-compiling -->
-	<!-- target="${javac.target}" source="${javac.source}" -->
-	<src path="${bigdata.dir}/bigdata-lubm/src/java" />
-</javac>
-<!-- copy resources. -->
-<copy toDir="${build.dir}/lubm/classes">
-	<fileset dir="${bigdata.dir}/bigdata-lubm/src/java">
-		<exclude name="**/*.java" />
-	</fileset>
-</copy>
-</target>
-
-<target name="lubm-jar" depends="lubm-compile" description="Generates the JAR containing the optional LUBM integration.">
-<jar destfile="${build.dir}/lubm/lib/bigdata-lubm.jar">
-	<fileset dir="${build.dir}/lubm/classes" />
-</jar>
-</target>
-
-<!-- This explicitly enumerates the lubm scripts so we don't run
-	 fixcrlf or set the execute bit on arbitrary files in the 
-	 install directory. -->
-<fileset dir="${install.bin.dir}" id="lubm-scripts" description="The lubm scripts.">
-<include name="lubmMaster.sh" />
-<include name="lubmQuery.sh" />
-<include name="lubmGen.sh" />
-</fileset>
-
-<!-- While this installs the LUBM integration into the same place as the
-     bigdata federation, you do not need to have the LUBM classes or the
-     integration classes installed when you start the bigdata federation.
-     Those classes will be automatically found when you run the lubmMaster
-     script, which exposes them using a ClassServer.  You can use this as
-     a model for how to install and run your own software against a bigdata 
-     federation that is already up and running. -->
-<target name="lubm-install" depends="lubm-jar" description="Install the optional lubm integration which may be used for benchmarking the RDF database.">
-<mkdir dir="${install.lubm.dir}" />
-<mkdir dir="${install.lubm.lib.dir}" />
-<mkdir dir="${install.lubm.config.dir}" />
-<!-- install JAR. -->
-<copy toDir="${install.lubm.lib.dir}" file="${build.dir}/lubm/lib/bigdata-lubm.jar" />
-<!-- install ontology, configuration files, and query files. -->
-<copy toDir="${install.lubm.config.dir}">
-	<fileset dir="bigdata-lubm/resources/config" />
-</copy>
-<!-- install scripts. -->
-<copy toDir="${install.bin.dir}">
-	<fileset dir="bigdata-lubm/resources/scripts" />
-</copy>
-<!-- replace will only find those @XXX@ parameters which have not yet been
-		 transcribed out by the bigdata ant install. -->
-<replace dir="${install.bin.dir}" summary="true">
-	<replacefilter token="@NAS@" value="${NAS}" />
-	<replacefilter token="@BIN_DIR@" value="${install.bin.dir}" />
-	<replacefilter token="@BIGDATA_CONFIG@" value="${bigdata.config}" />
-	<replacefilter token="@LUBM_CLASS_SERVER_PORT@" value="${LUBM_CLASS_SERVER_PORT}" />
-	<replacefilter token="@LUBM_CLASS_SERVER_HOSTNAME@" value="${LUBM_CLASS_SERVER_HOSTNAME}" />
-	<replacefilter token="@LUBM_RMI_CODEBASE_URL@" value="${LUBM_RMI_CODEBASE_URL}" />
-	<replacefilter token="@install.lubm.lib.dir@" value="${install.lubm.lib.dir}" />
-	<replacefilter token="@install.lubm.config.dir@" value="${install.lubm.config.dir}" />
-</replace>
-<replace dir="${install.lubm.config.dir}" summary="true">
-	<replacefilter token="@NAS@" value="${NAS}" />
-	<replacefilter token="@BIN_DIR@" value="${install.bin.dir}" />
-	<replacefilter token="@BIGDATA_CONFIG@" value="${bigdata.config}" />
-	<replacefilter token="@LUBM_CLASS_SERVER_PORT@" value="${LUBM_CLASS_SERVER_PORT}" />
-	<replacefilter token="@LUBM_CLASS_SERVER_HOSTNAME@" value="${LUBM_CLASS_SERVER_HOSTNAME}" />
-	<replacefilter token="@LUBM_RMI_CODEBASE_URL@" value="${LUBM_RMI_CODEBASE_URL}" />
-	<replacefilter token="@install.lubm.lib.dir@" value="${install.lubm.lib.dir}" />
-	<replacefilter token="@install.lubm.config.dir@" value="${install.lubm.config.dir}" />
-</replace>
-<!-- fix newlines (otherwise substitutions cause things to break). -->
-<fixcrlf srcDir="${install.bin.dir}">
-	<!-- file set not supported. <fileset refid="scripts" /> -->
-</fixcrlf>
-<!-- set execute bit for scripts in this directory (must be the last step). -->
-<chmod perm="u+x,g+rx,o-rwx">
-	<fileset refid="lubm-scripts" />
-</chmod>
-<!-- Make sure that it is all accessible to the install group (ant 1.6+ plus extension module required). 
-	<chown file="${NAS}" type="both" owner="${install.user}.${install.group}" verbose="true"/>
-	-->
-<!-- Works for earlier versions of ant LT 1.6 which do not bundle "chown". -->
-<apply executable="chown" description="set owner on NAS files" osfamily="unix">
-	<arg value="-R" />
-	<arg value="${install.user}.${install.group}" />
-	<dirset dir="${install.bin.dir}" />
-</apply>
-<apply executable="chown" description="set owner on NAS files" osfamily="unix">
-	<arg value="-R" />
-	<arg value="${install.user}.${install.group}" />
-	<dirset dir="${install.lubm.dir}" />
-</apply>
-</target>
-
-<!-- lubm runtime classpath w/o install. -->
-<path id="lubm.runtime.classpath">
-<pathelement location="${build.dir}/lubm/classes" />
-<pathelement location="${build.dir}/classes" />
-<path refid="build.classpath" />
-</path>
-
-<target name="lubm-load" depends="jar, lubm-compile" description="Load data into a configured lubm test harness, typically standalone.">
-
-<java classname="edu.lehigh.swat.bench.ubt.Test" failonerror="true" fork="true" logerror="true">
-	<classpath refid="lubm.runtime.classpath" />
-	<jvmarg value="-server" />
-	<jvmarg value="-Xmx1024m" />
-	<jvmarg value="-Dcom.bigdata.jmx.log4j.disable=true" />
-	<jvmarg value="-Dlog4j.configuration=file:bigdata/src/resources/logging/log4j.properties" />
-	<arg value="load" />
-	<arg value="bigdata-lubm/src/java/edu/lehigh/swat/bench/ubt/bigdata/config.kb.bigdata" />
-</java>
-
-</target>
-
-<target name="lubm-test" depends="jar, lubm-compile" description="Run queries against a configured lubm test harness, typically standalone.">
-
-<java classname="edu.lehigh.swat.bench.ubt.Test" failonerror="true" fork="true" logerror="true">
-	<classpath refid="lubm.runtime.classpath" />
-	<jvmarg value="-server" />
-	<jvmarg value="-Xmx1024m" />
-	<jvmarg value="-Dcom.bigdata.jmx.log4j.disable=true" />
-	<jvmarg value="-Dlog4j.configuration=file:bigdata/src/resources/logging/log4j.properties" />
-	<arg value="query" />
-	<arg value="bigdata-lubm/src/java/edu/lehigh/swat/bench/ubt/bigdata/config.kb.bigdata" />
-	<arg value="bigdata-lubm/src/java/edu/lehigh/swat/bench/ubt/bigdata/config.query.sparql" />
-</java>
-
-</target>
 	
 <!--                                                                   -->
 <!--                    MISC. UTILITY TARGETS                          -->
@@ -807,54 +652,6 @@ ${postInstallMessage}</echo>
 	<arg value="${bigdata.config}" />
 </java>
 
-</target>
-
-<target name="DataLoader" depends="compile" description="Loads RDF data into a local KB.  You MUST edit this ant target before running it.">
-<java classname="com.bigdata.rdf.store.DataLoader" fork="true" failonerror="true">
-	<!-- usage: [-namespace namespace] propertyFile (fileOrDir)+ -->
-	<!-- Where:                                                  -->
-	<!-- [-namespace namespace] is the KB namespace (default is 'kb'). -->
-	<!-- propertyFile is a properties file identifying the Journal and
-		     giving various Journal and/or kb configuration properties if one
-		     or the other needs to be created. -->
-	<!-- (fileOrDir)+ is a list of one or more RDF files or directories to
-		     be loaded.  zip and gz extensions are recognized, but only one file
-		     is loaded per archive. -->
-	<arg line="custom.properties fileOrDir" />
-	<jvmarg value="-server" />
-	<!-- Specify the maximum Java heap size. -->
-	<jvmarg value="-Xmx10g" />
-	<!-- optionally enable yourkit profiler. 
-        <jvmarg value="-DLD_LIBRARY_PATH=/nas/install/yjp-8.0.19/bin/linux-x86-64"/>
-        <jvmarg value="-agentpath:/nas/install/yjp-8.0.20/bin/linux-x86-64/libyjpagent.so"/>
-        <jvmarg value="-agentlib:yjpagent=disableexceptiontelemetry,disablestacktelemetry"/>
-        -->
-	<jvmarg value="-XX:+UseParallelOldGC" />
-	<!-- Optional enable GC trace.
-		<jvmarg line="-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:jvm_gc.log"/>
-		-->
-	<classpath>
-		<path refid="runtime.classpath" />
-	</classpath>
-</java>
-</target>
-
-<target name="set-properties" depends="compile" description="Set or change properties for a kb instance. You MUST edit this target to specify the name of the journal.  The new values are read from stdin.">
-<java classname="com.bigdata.rdf.sail.BigdataSailHelper" fork="true" failonerror="true" inputstring="com.bigdata.relation.rule.eval.DefaultRuleTaskFactory.nestedSubquery=false">
-	<!-- Various things you might want to change:
-
-	  Maximum #of threads for joins.
-  	  inputstring="com.bigdata.relation.rule.eval.ProgramTask.maxParallelSubqueries=5"
-  	  
-  	  Nested subquery vs pipeline joins.
-  	  inputstring="com.bigdata.relation.rule.eval.DefaultRuleTaskFactory.nestedSubquery=true"
-  	  
--->
-	<arg line="d:/LTS.U50.jnl LTS kb" />
-	<classpath>
-		<path refid="runtime.classpath" />
-	</classpath>
-</java>
 </target>
 
     <!--                                                    -->
@@ -1960,7 +1757,7 @@ ${postInstallMessage}</echo>
 <!--                    PERFORMANCE TESTS                              -->
 <!--                                                                   -->
 
-<target name="run-performance-tests" depends="testCompile, lubm-jar" description="Runs a variety of performance tests.">
+<target name="run-performance-tests" depends="testCompile" description="Runs a variety of performance tests.">
 <!-- Note: This depends on the stage target. -->
 <path id="run.class.path.id">
 	<pathelement location="${junit.jar}" />
